# WiFi-Human-Pose

./: requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml  dashboard-a11y.yml  dashboard-pages.yml  desktop-release.yml  nvsim-server-docker.yml
ui/mobile/: package-lock.json  package.json
v2/: Cargo.toml
v2/crates/nvsim/: Cargo.toml
v2/crates/wifi-densepose-cli/: Cargo.toml
v2/crates/wifi-densepose-desktop/ui/: package-lock.json  package.json
v2/crates/wifi-densepose-mat/: Cargo.toml
